test/Fail/UselessPrivateImport.agda
module UselessPrivateImport where

private
  open import Common.Prelude
